# Sipsa-Insumos

./: .gitignore  app.py  iniciar_app.bat  pyproject.toml
conf/base/: catalog.yml  catalog_agricolas.yml  catalog_arriendos.yml  catalog_elementos.yml  catalog_empaques.yml  catalog_especies.yml  catalog_jornales.yml  catalog_pecuarios.yml  catalog_propagacion.yml  catalog_servicios.yml  catalog_sin_precio_ant.yml  globals.yml  logging.yml  mappings_articulos.yml  mappings_grupos.yml  parameters.yml  parameters_agricolas.yml  parameters_arriendos.yml  parameters_elementos.yml  parameters_empaques.yml  parameters_especies.yml  parameters_jornales.yml  parameters_pecuarios.yml  parameters_propagacion.yml  parameters_servicios.yml  parameters_sin_precio_ant.yml
scripts/: extraer_mappings.py  generar_mappings_jun2026.py  validar_vs_sas.py
src/sipsa_insumos/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/sipsa_insumos/pipelines/aggregation/: nodes.py  pipeline.py
src/sipsa_insumos/pipelines/comparison/: nodes.py  pipeline.py
src/sipsa_insumos/pipelines/enrichment/: nodes.py  pipeline.py
src/sipsa_insumos/pipelines/ingestion/: nodes.py  pipeline.py
src/sipsa_insumos/pipelines/quality/: nodes.py  (+1 more)
src/sipsa_insumos/utils/: excel_writer.py  parsers.py
src/sipsa_insumos/validations/: schemas.py
templates/: index.html
tests/: conftest.py
tests/pipelines/aggregation/: test_nodes.py
tests/pipelines/comparison/: test_nodes.py
tests/pipelines/enrichment/: test_nodes.py
tests/pipelines/quality/: test_nodes.py
tests/utils/: test_parsers.py
(+4 files in other folders)
