[tool.kedro]
package_name = "sipsa_insumos"
project_name = "sipsa-insumos"
kedro_init_version = "0.19.15"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/sipsa_insumos -ra"
testpaths = ["tests"]
markers = [
    "integration: requiere archivos reales en disco",
    "slow: ejecuta kedro run completo",
]

[project]
name = "sipsa-insumos"
version = "0.1.0"
description = "Migración SIPSA Insumos: procesamiento mensual de insumos agropecuarios"
requires-python = ">=3.9"
dependencies = [
    "kedro>=0.19.0,<1.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "kedro-datasets[pandas.ExcelDataset,pandas.ParquetDataset,yaml.YAMLDataset]>=3.0,<8.0",
    "pandera>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.kedro_telemetry]
project_id = "sipsa-insumos-local"
